--- a/src/styles/question.scss
+++ b/src/styles/question.scss
@@ -12,6 +12,19 @@
           color: #29292e;
      }
 
+     &.highlight {
+          background-color: #f4f0ff;
+          border: 1px solid #835afd;
+
+          footer .user-info span {
+               color: #29292e
+          }
+     }
+
+     &.answered {
+          background-color: #dbdcdd;
+     }
+
      footer {
           display: flex;
           justify-content: space-between;
@@ -34,6 +47,11 @@
                color: #737380;
                font-size: 14px;
           }
+     }
+
+     > div {
+          display: flex;
+          gap: 16px;
      }
 
      button {
