--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -6,8 +6,8 @@
      aside {
           flex: 7; 
 
-          background: #835afd;
-          color: #fff;
+          background: #82DE78;
+          color: #000;
 
           display: flex;
           flex-direction: column;
@@ -29,7 +29,7 @@
                font-size: 24px;
                line-height: 32px;
                margin-top: 16px;
-               color: #f8f8f8
+               color: #222
           }
      }
 
@@ -53,11 +53,12 @@
 
           >img {
                align-self: center;
+               max-width: 400px;
           }
 
           h2 {
                font-size: 24px;
-               margin: 64px 0 24px;
+               margin: 24px 0 24px;
                font-family: 'Poppins', sans-serif;
           }
 
@@ -85,13 +86,13 @@
               margin-top: 16px;
 
               a {
-                   color: #e559f9
+                   color: #2FD343
               }
           }
      }
 
      .create-room {
-          margin-top: 64px;
+          margin-top: 0px;
           height: 50px;
           border-radius: 8px;
           font-weight: 500;
