--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -2,7 +2,7 @@
      height: 50px;
      border-radius: 8px;
      font-weight: 500;
-     background: #835afd;
+     background: #2FD343;
      color: #fff;
      padding: 0 32px;
 
@@ -21,8 +21,8 @@
 
      &.outlined {
           background: #fff;
-          border: 1px solid #835afd;
-          color: #835afd;
+          border: 1px solid #2FD343;
+          color: #2FD343;
      }
 
      &:not(:disabled):hover {
