--- a/src/styles/question.scss
+++ b/src/styles/question.scss
@@ -1,6 +1,7 @@
 .question {
      background: #fefefe;
      border-radius: 8px;
+     border: 1px solid #2FD343;
      box-shadow: 0 2px 12px rgba(0,0,0,0.04);
      padding: 24px;
 
@@ -13,8 +14,8 @@
      }
 
      &.highlight {
-          background-color: #f4f0ff;
-          border: 1px solid #835afd;
+          background-color: #DFFFE3;
+          border: 1px solid #2FD343;
 
           footer .user-info span {
                color: #29292e
@@ -67,10 +68,10 @@
                gap: 8px;
 
                &.liked {
-                    color: #835afd;
+                    color: #2FD343;
 
                     svg path {
-                         stroke: #835afd;
+                         stroke: #2FD343;
                     }
                }
           }
