--- a/src/styles/room-code.scss
+++ b/src/styles/room-code.scss
@@ -4,14 +4,14 @@
      overflow: hidden;
 
      background:  #fff;
-     border: 1px solid #835afd;
+     border: 1px solid #000;
      cursor: pointer;
 
      display: flex;
 
      div {
-          background: #835afd;
-          padding: 0 12px;
+          background: #2FD343;
+          padding: 0 10px;
           display: flex;
           justify-content: center;
           align-items: center;
@@ -21,9 +21,9 @@
      span {
           display: block;
           align-self: center;
-          flex: 1;
-          padding: 0 16px 0 12px;
-          width: 230px;
+          //flex: 1;
+          padding: 0 10px 0 5px;
+          //width: 230px;
           font-size: 14px;
           font-weight: 500;
      }
